Solved minor issue with the z-index in home

--- a/style/Home.css
+++ b/style/Home.css
@@ -160,7 +160,6 @@ a:hover{
 	float: left;
 	margin: 15px;
 	position: relative;
-	background-color: black;
 	box-shadow: 0px 3px 6px rgba(0,0,0,0.50);
 }
 
@@ -169,7 +168,7 @@ a:hover{
 	transform: translateX(-50%);
 	margin-top: -2.5%;
     height: 105%;
-	opacity: 0.5;
+	z-index: -1;
 }
 
 .img_category p {
@@ -183,10 +182,10 @@ a:hover{
 
 .list_category_hover {
 	position: absolute;
+	background-color: rgba(0,0,0,0.5);
 	width: 100%;
 	height: 100%;
 	border-radius: 3%;
-	z-index: 1;
 	box-shadow: inset 0 0 30px rgba(0, 0, 0, 0.4);
 }
 
